# vider

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: release.yml
backend/: main.py  pyproject.toml  requirements.txt
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: UrlForm.jsx  VideoCard.jsx
